# parquet_reader

./: CMakeLists.txt  README.md  parquet_f32.cpp  parquet_f32.h
tests/: test_parquet_reader.cpp
